fix: overflow of metrics section if it was to big

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -30,6 +30,7 @@
       display: flex;
       flex-direction: column;
       height: 250px;
+      overflow: auto;
 
       h2 {
         font-size: 14px;
